--- a/src/styles/MovieFinder.css
+++ b/src/styles/MovieFinder.css
@@ -18,16 +18,21 @@
 
 .movie-finder__list { 
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .movie-finder__movieclip {
-    display: flex
+    display: flex;
+    width: 200px;
+    height: 100px;
+    margin: 20px;
 }
 .movie-finder__movie_details {
     display: flex;
-    margin: 20px 20px;
-    flex-direction: column;
-    border: 1px solid black;
+    justify-content: space-evenly;
+    margin: 20px;
+    border-bottom: 1px solid black;
+    padding-bottom: 15px;
 }
 .movie-finder__movie_results{
     margin: 30px;
