--- a/src/styles/MovieFinder.css
+++ b/src/styles/MovieFinder.css
@@ -23,14 +23,14 @@
 }
 .movie-finder__movieclip {
     display: flex;
-    width: 200px;
-    height: 100px;
+    width: 160px;
+    /* height: 200px; */
     margin: 20px;
     cursor: pointer;
 }
 .movie-finder__movie_details {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     margin: 20px;
     border-bottom: 1px solid black;
     padding-bottom: 15px;
